feat: update semantic roles

--- a/mtrf.tex
+++ b/mtrf.tex
@@ -144,18 +144,20 @@ The Proposition Bank (PropBank) is an annotated corpus of semantic roles based o
 \centering
 \begin{tabular}{l|l} 
 \hline
-\textbf{Semantic Role}  &   \textbf{Definition} \\ \hline
-ARG0                    &   Proto-agent, the event participant that most likely to be the agent, \\ 
+\textbf{PropBank Semantic Role}  &   \textbf{Definition} \\ \hline
+Arg0                    &   proto-agent, the argument that most likely to be the agent, \\ 
                         &   volitional causer or experiencer \\ \hline
-ARG1                    &   Proto-patient, the event participant that most likely to be the patient \\ \hline
-ARG2                    &   The instrument, benefactive or attribute \\ \hline
-ARG3                    &   The starting point, benefactive or attribute \\ \hline
-ARG4                    &   The ending point \\ \hline
-ARGM-MNR                &   The event participant that specifies how the action is performed \\ \hline
-ARGM-LOC                &   The event participant that indicates where the action takes place \\ \hline
-ARGM-TMP                &   The event participant that shows when an action took place \\ \hline
+Arg1                    &   proto-patient, the argument that most likely to be the patient \\ \hline
+Arg2                    &   the instrument, benefactive or attribute \\ \hline
+Arg3                    &   the starting point, benefactive or attribute \\ \hline
+Arg4                    &   the ending point \\ \hline
+ArgM-LOC                &   the argument that indicates where the action takes place \\ \hline
+ArgM-MNR                &   the argument that specifies how the action is performed \\ \hline
+ArgM-TMP                &   the argument that shows when an action took place \\ \hline
+ArgM-PNC                &   the argument that shows motivation for some action \\ \hline
+ArgM-CAU                &   the argument that indicates the reason for an action \\ \hline
 \end{tabular}
-\caption{\label{tab:semantic} Definitions of semantic roles in PropBank style used in this paper.}
+\caption{\label{tab:propbank} Definitions of major semantic roles in PropBank style.}
 \end{table}
 
 
