feat: fix figures

--- a/mtrf.tex
+++ b/mtrf.tex
@@ -313,7 +313,7 @@ Since there is a vector $\mathbf{b}_y$ representing target role $b_y$, the embed
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=0.7\textwidth]{MTNNRF.png}
+\includegraphics[width=0.7\textwidth]{MTRF.png}
 \caption{\label{fig:MTNNRF} Model architecture of multitask version of non-incremental role filler.}
 \end{figure}
 
@@ -346,8 +346,8 @@ where suffix $(x)$ is the $x$-th element of the vector. And the conditional prob
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=0.7\textwidth]{MTNNRF.png}
-\caption{\label{fig:MTNNRF} Model architecture of multitask version of non-incremental role filler.}
+\includegraphics[width=0.8\textwidth]{BOP.png}
+\caption{\label{fig:BOP} Model architecture of bag-of-predicates/participants.}
 \end{figure}
 
 
